--- a/packages/SystemUI/res/drawable/ic_pin.xml
+++ b/packages/SystemUI/res/drawable/ic_pin.xml
@@ -1,22 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--
+Copyright (C) 2014 The Android Open Source Project
 
+   Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-
-android:width="24dp"
-
-android:height="24dp"
-
-android:viewportWidth="24"
-
-android:viewportHeight="24">
-
-
-
-<path
-
-    android:fillColor="@color/recents_task_bar_light_dismiss_color"
-
-    android:pathData="M 11.681641,1.6464844 c -0.02997,0 -0.07099,0.052132 -0.09375,0.1210937
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+    <path
+        android:fillColor="@color/recents_task_bar_light_dismiss_color"
+        android:pathData="M 11.681641,1.6464844 c -0.02997,0 -0.07099,0.052132 -0.09375,0.1210937
 
 -0.126887,0.3844692 0.331049,1.0249359 1.191406,1.6660157 0.186761,0.1391612
 
@@ -54,6 +58,5 @@ android:viewportHeight="24">
 
 1.737667,0.414057 2.117187,0.21875 0.192481,-0.099056 0.286355,-0.238881
 
-0.208985,-0.3125 -0.07451,-0.0709 -8.65629,-4.5117187 -8.71875,-4.5117187 z" />
-
+0.208985,-0.3125 -0.07451,-0.0709 -8.65629,-4.5117187 -8.71875,-4.5117187 z"/>
 </vector>
