base: navbar enabler
-fix assist for hw button devices
-add long press menu
-use recents style also for hw buttons for the moment

Change-Id: Ie95090b660bee2f523886e6c9fbf3ee3adb50b08

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -75,4 +75,5 @@
   <java-symbol type="bool" name="config_button_brightness_support" />
   <java-symbol type="integer" name="config_button_brightness_default" />
 
+  <java-symbol type="integer" name="config_longPressOnMenuBehavior" />
 </resources>
