--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -68,14 +68,11 @@
   <java-symbol type="style" name="GlobalActionsAnimation" />
 
   <java-symbol type="drawable" name="expander_open_mtrl_alpha" />
-
   <java-symbol type="array" name="entries_battery_styles" />
   <java-symbol type="array" name="values_battery_styles" />
-
   <java-symbol type="bool" name="config_button_brightness_support" />
   <java-symbol type="integer" name="config_button_brightness_default" />
-
   <java-symbol type="integer" name="config_longPressOnMenuBehavior" />
-
   <java-symbol type="string" name="lock_to_app_toast_back" />
+  <java-symbol type="string" name="system_error_vendorprint" />
 </resources>
