Show a more descriptive message when vendor.img is out of date
Change-Id: I72781f278e654e96cad00a73a45454c22e58f49e

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -78,4 +78,6 @@
   <java-symbol type="integer" name="config_longPressOnMenuBehavior" />
 
   <java-symbol type="string" name="lock_to_app_toast_back" />
+
+  <java-symbol type="string" name="system_error_vendorprint" />
 </resources>
