[1/2] base: unlink notification volume is back
also add long press dnd tile to open details
without changing state

Change-Id: Id26021832ad1ca5e579878ee2471f7c401bc74ac

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -75,4 +75,7 @@
   <java-symbol type="integer" name="config_longPressOnMenuBehavior" />
   <java-symbol type="string" name="lock_to_app_toast_back" />
   <java-symbol type="string" name="system_error_vendorprint" />
+  <java-symbol type="drawable" name="ic_audio_notification_am_alpha" />
+  <java-symbol type="drawable" name="ic_audio_notification_mute_am_alpha" />
+
 </resources>
