base: bring back screen record shortcut
Change-Id: Iad561a2dc7f6c68b49e40537c4d5152d93dcdf09

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -77,5 +77,5 @@
   <java-symbol type="drawable" name="ic_audio_notification_new" />
   <java-symbol type="drawable" name="ic_audio_notification_mute_new" />
   <java-symbol type="drawable" name="ic_audio_notification_mute_alpha" />
-
+  <java-symbol type="bool" name="config_enableScreenrecordChord" />
 </resources>
