base: correct sensor handling
Older sensors are not setting event.timestamp correctly.  Setting to
true will use SystemClock.elapsedRealtimeNanos() to set timestamp

Change-Id: I2adfb9974d14afd4a5feef790cf847470c55aa5d

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2350,4 +2350,7 @@
   <java-symbol type="bool" name="config_cameraDoubleTapPowerGestureEnabled" />
 
   <java-symbol type="drawable" name="platlogo_m" />
+
+  <java-symbol type="bool" name="config_useSystemClockforSensors" />
+
 </resources>
