--- a/packages/DocumentsUI/res/drawable/actionmode_background.xml
+++ b/packages/DocumentsUI/res/drawable/actionmode_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013 The Android Open Source Project
+<!-- Copyright (C) 2008 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
 -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-    <solid android:color="?android:attr/colorBackground" />
+        android:shape="rectangle">
+    <solid android:color="@*android:color/material_blue_grey_800" />
 </shape>
-
