WIP base: weather in header view
Change-Id: I28172f8ca7cf277284cb0bdcb934a085763c95a6

--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -203,4 +203,11 @@
         android:padding="2dp"
         />
 
+    <ImageView android:id="@+id/weather_image"
+        android:layout_width="64dip"
+        android:layout_height="64dip"
+        android:layout_gravity="bottom|end"
+        android:scaleType="centerCrop"
+        android:visibility="gone" />
+
 </com.android.systemui.statusbar.phone.StatusBarHeaderView>
