[1/2] base: weather in header view
Change-Id: I28172f8ca7cf277284cb0bdcb934a085763c95a6

--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -30,6 +30,7 @@
     android:background="@drawable/notification_header_bg"
     android:clickable="true"
     android:focusable="true"
+    android:clipChildren="false"
     >
 
     <ImageView android:id="@+id/background_image"
@@ -190,9 +191,9 @@
         systemui:hasOverlappingRendering="false"
         />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/header_debug_info"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -201,6 +202,22 @@
         android:textStyle="bold"
         android:textColor="#00A040"
         android:padding="2dp"
-        />
+        />-->
+
+    <include layout="@layout/current_weather_view"
+         android:id="@+id/current_weather_view"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:visibility="gone"
+         android:layout_alignParentBottom="true"
+         android:layout_marginBottom="@dimen/clock_collapsed_bottom_margin"
+         android:layout_toEndOf="@id/alarm_status"
+         android:layout_marginStart="16dp" />
+
+    <include layout="@layout/detailed_weather_view"
+         android:id="@+id/detailed_weather_view"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:visibility="gone" />
 
 </com.android.systemui.statusbar.phone.StatusBarHeaderView>
