WIP base: weather in header view
Change-Id: I28172f8ca7cf277284cb0bdcb934a085763c95a6

--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -203,4 +203,13 @@
         android:padding="2dp"
         />
 
+    <include layout="@layout/current_weather_view"
+         android:id="@+id/current_weather_view"    
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:visibility="gone"
+         android:layout_below="@id/multi_user_switch"
+         android:layout_alignParentEnd="true"
+         android:padding="5dp"/>
+
 </com.android.systemui.statusbar.phone.StatusBarHeaderView>
