base: global actions: dark/light support
-global power menu
-startup progress
-shutdown thread

Change-Id: I1e0276311f01b6b9872bf981f73f9f7d53f243ed

--- a/core/res/res/layout/global_actions_item.xml
+++ b/core/res/res/layout/global_actions_item.xml
@@ -46,6 +46,7 @@
             android:layout_gravity="top"
 
             android:gravity="center_vertical"
+            android:textColor="@color/global_actions_text_color"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView android:id="@+id/status"
@@ -53,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:minHeight="26dp"
-
+            android:textColor="@color/global_actions_text_color"
             android:textAppearance="?android:attr/textAppearanceSmall"
             />
     </LinearLayout>
