SystemUI: navbar extra keys
Change-Id: I7cfcd30b5d49001e97aa85c284220f0fa7e556dc

--- a/packages/SystemUI/res/values/custom_config.xml
+++ b/packages/SystemUI/res/values/custom_config.xml
@@ -55,4 +55,6 @@
     <!-- Whether to use fingerprint pressed image -->
     <bool name="config_fodPressedImage">false</bool>
 
+    <bool name="config_nav_bar_system_keys">false</bool>
+
 </resources>
