--- a/packages/SystemUI/res/xml/nav_bar_tuner.xml
+++ b/packages/SystemUI/res/xml/nav_bar_tuner.xml
@@ -26,7 +26,13 @@
         android:summary="%s"
         android:persistent="false"
         android:entries="@array/nav_bar_layouts"
-        android:entryValues="@array/nav_bar_layouts_values" />
+        android:entryValues="@array/nav_bar_layouts_values_new" />
+
+    <com.android.systemui.tuner.TunerSwitch
+        android:key="sysui_nav_bar_system_keys"
+        android:title="@string/tuner_nav_bar_system_keys_title"
+        android:summary="@string/tuner_nav_bar_system_keys_summary"
+        sysui:defValue="false" />
 
     <PreferenceCategory
         android:title="@string/tuner_nav_bar_gesture_category" />
